# cityflaneur

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  init-sketch.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py
apps/api/app/data/: __init__.py  bandit_weights.json  ingestion.py  poi_cache.py  providers.py  seed.py
apps/api/app/db/: models.py  session.py
apps/api/app/engine/: __init__.py  agents.py  bandit.py  context.py  geo.py  llm.py  recommender.py  time.py  transit.py  urban_rhythm.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/services/: feedback.py  pulse.py  streetscapes.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py
apps/api/scripts/: run_simulation.py  seed_catalog.py  test_providers.py
apps/api/tests/: test_context.py  test_geo.py  test_ingestion.py  test_live_apis.py  test_pulse.py  test_recommender.py  test_simulation.py  test_streetscapes.py  test_transit.py  test_urban_rhythm.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: BentoControls.tsx  FlaneurOnboarding.tsx  HowItWorks.tsx  MapPanel.tsx  MapillaryViewer.tsx  NeighborhoodPulse.tsx  RecommendationCard.tsx  StreetScenes.tsx
apps/web/types/: cityflaneur.ts
docs/: algorithm-roadmap.md  architecture.md  backend.md  bandit.md  data.md  planning-algorithms.md
infra/postgres/: Dockerfile
